BUGFIX: menu-animation doesn't overlap logo anymore

--- a/Packages/Sites/IFSR.HomePage/Resources/Private/Scss/_Menu.scss
+++ b/Packages/Sites/IFSR.HomePage/Resources/Private/Scss/_Menu.scss
@@ -1,5 +1,6 @@
 .title-bar {
     position: relative;
+    z-index: 1;
     min-height: 100px;
 
     .menu-icon {
